# strupy3d

./: .gitignore  LICENSE  pyproject.toml  requirements_dev.txt
docs/: requirements_doc.txt
docs/source/: api_documentation.rst  conf.py  index.rst
strupy3d/: __init__.py
strupy3d/femodel/: femodel.py
strupy3d/femodel/geometry/: __init__.py  element.py  node.py  support.py
strupy3d/femodel/loading/: __init__.py  load.py
strupy3d/femodel/materials/: material.py
strupy3d/femodel/sections/: section.py
tests/strupy3d/femodel/: test_femodel.py
tests/strupy3d/femodel/geometry/: test_element.py  test_node.py  test_support.py
tests/strupy3d/femodel/loading/: test_load.py
tests/strupy3d/femodel/materials/: test_material.py
tests/strupy3d/femodel/sections/: test_section.py
